# ntfy

./: Cargo.toml  Dockerfile  README.md  compose.yml
.cargo/: config.toml
.github/workflows/: build.yml  rust.yml
docs/: ntfy.md
examples/: docker-compose.auth.yml  docker-compose.basic.yml  docker-compose.yml
scripts/: backup.sh  configure.sh  entrypoint.sh  install.sh  restore.sh  update.sh
src/: abi_export.rs  backend.rs  lib.rs  lifecycle.rs  main.rs  tools.rs
