[package]
name = "ntfy"
version = "0.1.0"
edition = "2021"
description = "ntfy push notifications — orca notifications backend + self-host deploy lifecycle"

[package.metadata.orca]
category = "monitoring"

[lib]
name = "ntfy"
path = "src/lib.rs"
# `cdylib` is the orca plugin artifact orca's `plugin-loader` `dlopen`s;
# `rlib` retains the in-crate `#[cfg(test)]` harness + lets the workspace use it
# as a normal Rust lib.
crate-type = ["cdylib", "rlib"]

# ntfy.sh-compatible push-notification backend plugin. Hand-written HTTP client
# (no codegen) — POSTs to an ntfy topic over `plugin_toolkit::http`, exposes an
# endpoint registry + a `notifications::Backend` impl.

[dependencies]
# The SOLE orca dependency. Every external crate the plugin needs — serde,
# serde_json, schemars, anyhow, async_trait, tracing, reqwest, urlencoding,
# chrono, clap — is reached through `plugin_toolkit::*` / its prelude, or
# injected by `#[plugin_struct]`/`#[orca_tool]`/`#[endpoint_resource]`. The
# plugin source names no external crate except `abi_stable` below.
#
# Pinned to orca `main` (the
# `urlencoding` re-export + the endpoint_resource/notifications domains). Until
# that rc is cut, the committed `[patch]` in `.cargo/config.toml` resolves this
# to the local in-tree toolkit at ../orca.
plugin-toolkit = { git = "https://github.com/argyle-labs/orca", branch = "main" }

# The ONE genuine non-orca dep: `#[export_root_module]` expands to bare
# `::abi_stable` paths in this crate's root (the cdylib FFI boundary the loader
# dlopens), so it can't route through the toolkit. Pinned to the orca workspace
# version (0.11) so the layout hash baked into the cdylib matches what orca's
# plugin-loader checks at load time.
abi_stable = "0.11"

[dev-dependencies]
# Dev-only: the in-crate tests reach serde_json/json! and a mock HTTP server
# through the toolkit + wiremock. Not runtime deps.
plugin-toolkit = { git = "https://github.com/argyle-labs/orca", branch = "main" }
tokio    = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
tempfile = "3"

# Match orca's workspace lint floor: discarding a Result/Option via
# `let _ = ...` was a load-bearing past incident, so keep it a hard error here
# too — the plugin must stay portable back into the orca workspace.
[lints.clippy]
let_underscore_must_use = "deny"
