[package]
name = "ntfy"
version = "0.1.0"
edition = "2021"
description = "ntfy push notifications — orca notifications backend + self-host deploy lifecycle"

[package.metadata.orca]
category = "monitoring"

[lib]
name = "ntfy"
path = "src/lib.rs"
# Dynamic (subprocess) plugin: orca spawns the `[[bin]]` and drives it over the
# orca socket, so no `cdylib` artifact is emitted. `rlib` retains the in-crate
# `#[cfg(test)]` harness + lets the `[[bin]]` and the workspace use it as a
# normal Rust lib.
crate-type = ["rlib"]

# The orca plugin entrypoint orca spawns and drives over the socket. `main.rs`
# is the toolkit's `serve_tool_plugin!` hybrid arm (tool surface + notification
# backends), replacing the retired cdylib `export_tool_plugin!` FFI export.
[[bin]]
name = "ntfy"
path = "src/main.rs"

# ntfy.sh-compatible push-notification backend plugin. Hand-written HTTP client
# (no codegen) — POSTs to an ntfy topic over `plugin_toolkit::http`, exposes an
# endpoint registry + a `notifications::Backend` impl.

[dependencies]
# The SOLE dependency. Every external crate the plugin needs — serde,
# serde_json, schemars, anyhow, async_trait, tracing, reqwest, urlencoding,
# chrono, clap — is reached through `plugin_toolkit::*` / its prelude, or
# injected by `#[plugin_struct]`/`#[orca_tool]`/`#[endpoint_resource]`. The
# dynamic (subprocess) plugin names no external crate at all: retiring the
# cdylib dropped the lone `abi_stable` FFI dep, since `serve_tool_plugin!`
# reaches orca over the socket rather than across a `#[export_root_module]`
# ABI boundary.
#
# Pinned to orca `main` (the
# `urlencoding` re-export + the endpoint_resource/notifications domains). Until
# that rc is cut, the committed `[patch]` in `.cargo/config.toml` resolves this
# to the local in-tree toolkit at ../orca.
plugin-toolkit = { git = "https://github.com/argyle-labs/orca", branch = "main" }

[dev-dependencies]
# Dev-only: the in-crate tests reach serde_json/json! and a mock HTTP server
# through the toolkit + wiremock. Not runtime deps.
plugin-toolkit = { git = "https://github.com/argyle-labs/orca", branch = "main" }
tokio    = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
tempfile = "3"

# Match orca's workspace lint floor: discarding a Result/Option via
# `let _ = ...` was a load-bearing past incident, so keep it a hard error here
# too — the plugin must stay portable back into the orca workspace.
[lints.clippy]
let_underscore_must_use = "deny"
